fix: arreglo overflow del grafico de metas

--- a/finanzas/app/templates/home.html
+++ b/finanzas/app/templates/home.html
@@ -39,6 +39,13 @@
     }
 </style>
 
+<!-- Grafico Metas -->
+<style>
+    #google-chart-container-metas {
+        overflow: hidden; /* Evita que el contenido salga de los límites */
+    }
+</style>
+
 <div class="container my-4">
     <header class="text-center mb-4">
         <div class="d-flex justify-content-center align-items-center">
