--- a/finanzas/app/templates/home.html
+++ b/finanzas/app/templates/home.html
@@ -37,6 +37,9 @@
     #google-chart-container-categorias {
         overflow: hidden; /* Evita que el contenido salga de los límites */
     }
+    #google-piechart-categorias{
+        margin-top: -35%;
+    }
 </style>
 
 <!-- Grafico Metas -->
@@ -44,6 +47,9 @@
     #google-chart-container-metas {
         overflow: hidden; /* Evita que el contenido salga de los límites */
     }
+    #google-piechart-metas {
+    margin-top: -30%;
+}
 </style>
 
 <div class="container my-4">
@@ -98,43 +104,41 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="card p-3 bg-light">
+            <div class="card p-3 bg-light text-center">
                 <h5>Porcentaje de Categorías</h5>
                 
                 <!-- Selector de Gastos o Ingresos-->
-                <div class="col-md-4 mb-3">
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="d-flex align-items-center">
-                            <span class="me-2">Gastos</span>
-                            <div class="form-check form-switch">
-                                <input class="form-check-input" type="checkbox" id="montoSwitch" name="montoSwitch">
-                            </div>
-                            <span class="ms-2">Ingresos</span>
+                <div class="col-md-4 mb-3 mx-auto">
+                    <div class="d-flex justify-content-center align-items-center">
+                        <span class="me-2">Gastos</span>
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" type="checkbox" id="montoSwitch" name="montoSwitch">
                         </div>
+                        <span class="ms-2">Ingresos</span>
                     </div>
                 </div>
                 
-                <!-- Gráfico de Categorias -->
-                <div class="col-12 d-flex mt-4"> 
+                <!-- Gráfico de Categorías -->
+                <div class="col-12 d-flex justify-content-center mt-4">
                     <div id="google-chart-container-categorias">
                         <div id="google-piechart-categorias" style="width: 400px; height: 400px;"></div>
                     </div>           
-                    <div class="alert alert-warning" role="alert" id="mensaje-resultados-categorias">
+                    <div class="alert alert-warning" role="alert" id="mensaje-resultados-categorias" style="display: none;">
                         No hay datos registrados.
                     </div>
                 </div>
                 
                 <!-- Gráfico de Metas -->
                 <h5>Porcentaje de Metas Cumplidas</h5>
-                <div class="col-12 d-flex mt-4"> 
+                <div class="col-12 d-flex justify-content-center mt-4">
                     <div id="google-chart-container-metas">
                         <div id="google-piechart-metas" style="width: 400px; height: 400px;"></div>
                     </div>           
-                    <div class="alert alert-warning" role="alert" id="mensaje-resultados-metas">
+                    <div class="alert alert-warning" role="alert" id="mensaje-resultados-metas" style="display: none;">
                         No hay datos registrados.
                     </div>
                 </div>
-            </div>
+            </div>            
         </div>
     </div>
 </div>
@@ -249,7 +253,6 @@
         }
 
         var options = {
-            title: tituloGrafico,
             pieSliceText: 'percentage',
             slices: {
                 0: { color: '#FF6384' },
