fix: centro titulo de historico de saldos

--- a/finanzas/app/templates/home.html
+++ b/finanzas/app/templates/home.html
@@ -94,7 +94,7 @@
     <!-- Charts Section -->
     <div class="row">
         <div class="col-md-8">
-            <div class="card p-3 bg-light">
+            <div class="card p-3 bg-light text-center">
                 <h5>Históricos de Saldos en los Últimos Meses</h5>
                 
                 <!-- Grafico de Saldos -->
