--- a/finanzas/app/templates/reporte_financiero.html
+++ b/finanzas/app/templates/reporte_financiero.html
@@ -49,7 +49,7 @@
 
         
         <div class="col-12 d-flex mt-4">
-            <!-- Gráfico de Google Charts -->
+            <!-- Grafico de Google Charts -->
             <div id="google-chart-container">
                 <div id="google-piechart" style="width: 600px; height: 600px;"></div>
             </div>
