--- a/finanzas/app/templates/gastos.html
+++ b/finanzas/app/templates/gastos.html
@@ -32,13 +32,13 @@
                             <label for="monto" class="form-label">Monto</label>
                             <div class="d-flex align-items-center">
                                 <div class="form-check form-switch">
-                                    <input class="form-check-input" type="checkbox" id="gasto_fijo" name="tipo_gasto" value="1" onchange="toggleFields()">
+                                    <input class="form-check-input" type="checkbox" id="gasto_fijo" name="tipo_gasto" value="1" onchange="toggleFields()" >
                                 </div>
                                 <span class="ms-2">Fijo</span>
                             </div>
                         </div>
                         <div class="input-group">
-                            <input type="text" class="form-control" id="monto" name="monto" required>
+                            <input type="float" class="form-control" id="monto" name="monto" required maxlength="14">
                         </div>
                     </div>     
                     
