--- a/finanzas/app/templates/base.html
+++ b/finanzas/app/templates/base.html
@@ -88,6 +88,9 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'promociones' %}">Promociones</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'metas' %}">Metas</a>
+            </li>
             <!--<li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Dropdown
@@ -144,3 +147,5 @@
     position: relative;
   } 
 </style>
+
+
