--- a/finanzas/app/templates/base.html
+++ b/finanzas/app/templates/base.html
@@ -22,7 +22,11 @@
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-
+  <!--Se agergo desde aca 13112024 en la facu-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  
+  <!--Se agergo hasta aca 13112024 en la facu-->
+  
     <style>
         footer {
             position: end;
