--- a/finanzas/app/templates/home.html
+++ b/finanzas/app/templates/home.html
@@ -60,7 +60,45 @@
             <h1>Saldo Actual y Estimado</h1>
         </div>
     </header>
+    <!--Se agergo desde aca 13112024 en la facu-->
+    <!--Acordeon-->
+    <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+              Acordeón Item #1
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              Este es el contenido del primer ítem del acordeón.
+            </div>
+          </div>
+        </div>
+        
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              Acordeón Item #2
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              Este es el contenido del segundo ítem del acordeón.
+            </div>
+          </div>
+        </div>
+      </div>
 
+    <!--Fin Acordeon-->
+    <!--Se agergo hasta aca 13112024 en la facu-->
+
+
+
+
+
+
+    
     <!-- KPI Cards for Saldo Actual y Saldo Futuro -->
     <div class="row my-4">
         <div class="col-md-4 offset-md-2 text-center">
